# ChangeLog for sys-libs/glibc
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.679 2010/02/15 06:18:04 armin76 Exp $

*glibc-2.11.2-r1

  24 Oct 2010; Daniel Robbins <drobbins@funtoo.org> +glibc-2.11.2-r1.ebuild:
  new from upstream; also updated eblits from upstream Gentoo but kept our
  "gd" elimination intact.

  29 Jun 2010; Daniel Robbins <drobbins@funtoo.org> removed "gd" USE and
  gd support from ebuilds.

  18 Apr 2010; Daniel Robbins <drobbins@funtoo.org> glibc-2.10.1-r1.ebuild:
  Funtoo changes for toolchain upgrade - depend on linux-headers-2.6.32*,
  gcc-4.4.3*, and force use of gcc-4.4.3 in src_unpack().

  15 Feb 2010; RaÃºl Porcel <armin76@gentoo.org>
  glibc-2.9_p20081201-r2.ebuild:
  s390/sh stable

  22 Jan 2010; Tom Gall <tgall@gentoo.org> glibc-2.10.1-r1.ebuild:
  stable on ppc64, bug #289342

  21 Jan 2010; RaÃºl Porcel <armin76@gentoo.org> glibc-2.10.1-r1.ebuild:
  sparc stable wrt #289342

  20 Jan 2010; Markus Meier <maekke@gentoo.org> glibc-2.10.1-r1.ebuild:
  arm stable, bug #289342

  19 Jan 2010; nixnut <nixnut@gentoo.org> glibc-2.10.1-r1.ebuild:
  ppc stable #289342

  18 Jan 2010; Tobias Klausmann <klausman@gentoo.org>
  glibc-2.10.1-r1.ebuild:
  Stable on alpha, bug #289342

  15 Jan 2010; Mike Frysinger <vapier@gentoo.org> glibc-2.10.1-r1.ebuild:
  Add ppc64 love #291287.

  15 Jan 2010; Mike Frysinger <vapier@gentoo.org> glibc-2.10.1-r1.ebuild:
  Mark ia64 stable #289342.

  14 Jan 2010; Jeroen Roovers <jer@gentoo.org> glibc-2.10.1-r1.ebuild:
  Stable for HPPA (bug #289342).

  10 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  glibc-2.10.1-r1.ebuild:
  x86 stable, bug 289342

  10 Jan 2010; Samuli Suominen <ssuominen@gentoo.org>
  glibc-2.10.1-r1.ebuild:
  amd64 stable wrt #289342

  05 Jan 2010; Mike Frysinger <vapier@gentoo.org> glibc-2.11-r1.ebuild:
  Add ppc/ppc64 love #297452.

  19 Dec 2009; Mike Frysinger <vapier@gentoo.org>