@@ -11,7 +11,7 @@ AUX eblits/pkg_postinst.eblit 1159 RMD160 4b99846819bf0471d1104a8a17dd260796644f
 AUX eblits/pkg_preinst.eblit 3764 RMD160 f9a9d43e2d2d8df073be7e1b66655e651cb10740 SHA1 b987e2802201e0f44c357ffc7b92da4aa77cf377 SHA256 41baa253ea529156d628108247545235c4ec377b184e7824bd790eba1361299e
 AUX eblits/pkg_setup.eblit 2814 RMD160 8352c4b9cc460b7193e17be8bca227db5b6df5ba SHA1 8de7ea78e364521b55574b16036d57e7d35a596f SHA256 b803723f75571649e10e0707a6dbe8b459eabdc149ef155558792db736faa201
 AUX eblits/src_compile-2.11.2.eblit 5847 RMD160 a8cb552162ce20d2a288d1090bbd8fa3ae897072 SHA1 95c97bb6f3e48ba35ae2a12dac37005324cbb6ec SHA256 8d39838d49b612deb06198538e890ba3ca5d96a38ad119e8520c511ee9683568
-AUX eblits/src_compile.eblit 5788 RMD160 ea8376ca0eeb28b2a02898fcd9baa2df9df00e25 SHA1 871080461b5415a4159d517ef94201fffa2c284a SHA256 5e56aacf048ff859d6b6cfff7fcdf30364e424eb18589c30ce5cb2df0dcf2cc2
+AUX eblits/src_compile.eblit 5817 RMD160 0319881b36a49a5b01e1c76d099526ffaa8a64f1 SHA1 1e34104ef990dde85956fe95fd42ef02f0bca499 SHA256 8d8ea213626005069734c741b911279bdf077587a66c796f1a0c523f7356805b
 AUX eblits/src_install-2.11.2.eblit 8052 RMD160 6447bb45b8c590769137daf3ddd62e15e3b394e1 SHA1 11506887d77910cd0cce2cb948315a55276e59a6 SHA256 f44fee8332d5d9167140f7eb6fe35f7cdfc15db7712b3392c2bec39dd2887700
 AUX eblits/src_install-2.6.eblit 7946 RMD160 6cc258a316b78212777ab328a3c0cb73de1616d4 SHA1 94895689b56fd712156e8ac84a2a639d8475da03 SHA256 54081c34217c230d0ff43c5df378897a37576e727fe41ee4d681767110667f3e
 AUX eblits/src_install.eblit 7978 RMD160 c359fe5addfbdaa9356ab7d3526102a5f563a40b SHA1 e9c2595fb4581440a2719755cee83672e6e51688 SHA256 27e6b07d7d1b4eb71e0c854fd658fbcfe9da603c21f714830f1db90662b671c9
@@ -24,6 +24,7 @@ DIST glibc-2.10.1-patches-6.tar.bz2 113352 RMD160 6874a93e993bb082fc4fd23582b5f6
 DIST glibc-2.10.1.tar.bz2 16106243 RMD160 ca102519ab32714e788a0db5dd43c2f9962c86e9 SHA1 cb478cf9d6e2c905a1a4f4a2cae44a320b8dc50b SHA256 cbad3e637eab613184405a87a2bf08a41991a0e512a3ced60d120effc73de667
 DIST glibc-2.11.2-patches-3.tar.bz2 104300 RMD160 5f8d0f6616e37fce84b76a185000fb5e4fa155de SHA1 b92296a4c3f51a2cd279cd6b7848ea272c71e821 SHA256 9941fa942afcd6e5224fad04192ffbcc47464965c02196a32067e529d53c504b
 DIST glibc-2.11.2-patches-4.tar.bz2 113687 RMD160 bd7de7710ac9d834abd441b461b1ecc07c181010 SHA1 48bd6a30a74445544e04a08b14762fe64c4e1799 SHA256 259558d05233f5490324724f639154bd9882d8aa3cdf78bcea54f42ed0d70c94
+DIST glibc-2.11.2-patches-6.tar.bz2 117116 RMD160 5e2dda6ddd8620af9513aae1033595ebd149c8f9 SHA1 b0f4b73a49d1117649acd74523bb5358e54cbf5e SHA256 490b81357fc43f2d23a050ed39440363b223c1e3f34e77b4596b981680fd9f23
 DIST glibc-2.11.2.tar.bz2 15675392 RMD160 15d14fb6b0b58ec3fb7781efa2f8a558fcb99a7e SHA1 23b477f4816a97e007be1e98abc1ffe2af13ba9e SHA256 c2ac76ee363eed31b2a377489fb2818139f4668b5505ad583009eb9b0e228713
 DIST glibc-libidn-2.10.1.tar.bz2 102248 RMD160 0fbb3ecc09f59f0b9e90e0669bd9cd6075164173 SHA1 50c1ac0d9ddff6eb83f75aa1c4cb84ba6fffa0cd SHA256 0fa72d1dd06a30642d3bb20a659f4ed0f4af54a205d7102896b68169b38676dc
 DIST glibc-ports-2.10.1.tar.bz2 584860 RMD160 1f094d4df18306ccb01037d07f0a0e3014fdfc60 SHA1 3cc9eff22d624c5fb6d951bbcb31b40112238fe7 SHA256 b1f1ec9720036a3a33598b8478eef102535444a083d5b5813a6981ed74ab4071
@@ -31,6 +32,8 @@ DIST glibc-ports-2.11.tar.bz2 599606 RMD160 e7262cb903b42d27bd0666fb170d2abb4c8b
 EBUILD glibc-2.10.1-r1.ebuild 8406 RMD160 112c138325b1eb313d2275f44f4c7447b15403b6 SHA1 c0a302e446133afa7fccfe1ecf670b820e40aa5a SHA256 331e9c9168fde137d7059bcf3ef325d3eb4554d420e063cdf0974adc0e8e66c4
 EBUILD glibc-2.10.1-r2.ebuild 8533 RMD160 0aaa4fd3ebdcb8ddd98dae33b6337efe20ff9ef4 SHA1 3e7a7f9f8742da393590f889cc04e2192ddbb6dc SHA256 8414025bc3247b26f0d0d74a177d97c90c45bda763fb4f61c953350f871be0fc
 EBUILD glibc-2.11.2-r1.ebuild 8244 RMD160 0d85a4312de42feebb48ce270b23c37e4002a74d SHA1 749586462108ce2f3772f7a3f9a9088abb0ff2ef SHA256 7a32b47b44bb95f644e0e52508ea144ff7f9c9ef611814307e86058f21df1631
+EBUILD glibc-2.11.2-r2.ebuild 8245 RMD160 0a97733cfe2e83a8a082055873a17b2aa5c47fe8 SHA1 5f804b89a00391e4c60d681a2e68ec8fa7046cdf SHA256 a62f7d34c25d8e264f22211ed8a32f22995dea1a27baf121fc6a28ba7572025c
 EBUILD glibc-2.11.2.ebuild 8373 RMD160 4ee94c3703d100d567e7070c9ddfdaabe285cb60 SHA1 39615aad6a4de28c49b4b7cb84d61faff02b028a SHA256 b348f02cb431e8df0fc8021cc041f991a247050d8a5e581adb87d69d9ae7bbd9
-MISC ChangeLog 125190 RMD160 6e7369b6c0c3e3caa54098a1e50f4bd8a6d28d8c SHA1 2f439191cea863e000107d29a6a7075ec1d209d0 SHA256 0cb18111cfdd7b055414f0bec71d5c9a0510707862d1b39e16cfb7e1ddd0d3d7
+MISC ChangeLog 125422 RMD160 1c86991137b406cc2f21dbe64a8f507168fd2874 SHA1 60f88406c0b05194d69a1e0a599f646a88bc6263 SHA256 78afc6a6a7b863574aab61d3952ab46f51a7f59bbabe3ae85efef33ff18ebe39
+MISC foo.out 2832 RMD160 ca2aa811a9698fc91e9bbb5ff5639f190e95715a SHA1 441cfbd842840feb7e1cef9686a30364cf40074d SHA256 f82497016878cdb4f161559aff5d9224d07ee6c46c1becec59b5799398f5fed2
 MISC metadata.xml 539 RMD160 cf4d236b54a77b3cea382d53e4e61721bd14169b SHA1 b54ad589378da193ddc89676f8468c6d1b79521f SHA256 d7cb6dd119c81b5bf12c360af3705ca31a56ffa8bec999b44faa63c183719c31
