@@ -134,6 +134,7 @@ toolchain-glibc_headers_compile() {
 	# hopefully they don't affect header geneation, so let's hope for
 	# the best here ...
 	export \
+		ac_cv_header_cpuid_h=yes \
 		libc_cv_386_tls=yes \
 		libc_cv_asm_cfi_directives=yes \
 		libc_cv_broken_visibility_attribute=no \
